# TSpire

./: .gitignore  README.md  _edit.py  pyproject.toml
tests/: fakes.py  test_capture.py  test_card_names.py  test_cards.py  test_classparse.py  test_client.py  test_combat_parser.py  test_config.py  test_controller_check.py  test_input_driver.py  test_input_executor.py  test_input_focus.py  test_input_keyboard.py  test_input_mouse.py  test_input_probe.py  test_llm_parser.py  test_potions.py  test_predict.py  test_reconcile.py  test_schema.py  test_server.py  test_state_provider.py  test_templates.py
tools/: __init__.py  _fg_test.py  extract_assets.py
tspire/: __init__.py
tspire/client/: __init__.py  app.py  commands.py  connection.py
tspire/client/views/: __init__.py  dashboard.py
tspire/common/: __init__.py  protocol.py  schema.py
tspire/host/: __init__.py  calibrate.py  capture.py  cards.py  classify.py  config.py  game_assets.py  input_probe.py  predict.py  reconcile.py  server.py  state.py  state_tracker.py
tspire/host/input/: __init__.py  controller_check.py  driver.py  executor.py  focus.py  keyboard.py  mouse.py  preflight.py
tspire/host/vision/: __init__.py  backend.py  card_names.py  classparse.py  combat.py  easyocr_reader.py  llm.py  potions.py  regions.py  templates.py
